--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 
-# Godot-specific ignores
-.import/
-export.cfg
-export_presets.cfg
+# New to this just learning my way through
 
-# Mono-specific ignores
-.mono/
-data_*/
+# Ignore my nonesences
